:sparkles: feat: Groq API 요청 응답
ChatModel을 활용해 Groq API 연동 구현
Groq 프롬프트를 작성하여 Groq API 응답 요청
Groq 응답 JSON 형식 추출
Groq 응답 DB에 저장